Changes
=======

Next release
------------

Features
~~~~~~~~

- ``DatePartsWidget`` now renders error "Required" if all blank or
  "Incomplete" if partially blank for consistency with the other widgets.

0.6 (2010-09-03)
----------------

Features
~~~~~~~~

- Sequence widgets are no longer ``structural`` by default; they now
  print the label of the sequence above the sequence adder.

- Radio buttons in a radio button choice widget are now spaced closer
  together and the button is on the left hand side.

- The sequence remove button is no longer an image.

- The sequence widget now puts the sequence adding link *after* any
  existing items in the sequence (previously the link was always
  beneath the sequence title).

- It is now possible to associate a widget with a schema node within
  the schema directly.  For example::

    import colander
    import deform.widget

    class MySchema(Schema):
        description = colander.SchemaNode(
                          colander.String(),
                          widget=deform.widget.RichTextWidget()
                          )

  For more information, see "Changing the Default Widget Associated
  With a Field" in the documentation.

- The constructor of ``deform.Field`` objects (and thus
  ``deform.Form`` objects) now accept arbitrary keyword arguments,
  each of which is attached to the field or form object being
  constructed, as well as being attached to its descendant fields
  recursively.

- The form object's template now respects the ``css_class`` argument /
  attribute of the form node.

- CheckboxChoice and RadioChoice widgets now use <ul> and <li> to
  display individual choice elements (thanks to Ergo^), and both
  widgets put the label after the element instead of before as
  previously.

- The ``deform.widget.AutocompleteInputWidget`` widget now uses
  `JQuery UI's autocomplete sublibrary
  <http://docs.jquery.com/UI/Autocomplete>` instead of the