@@ -1,23 +1,21 @@
-<div>
-
-  <input type="hidden" name="__start__" value="${field.name}:mapping"/>
-
-  <div>
+<input type="hidden" name="__start__" value="${field.name}:mapping"/>
+<ul>
+  <li>
     <label for="${field.oid}">${subject}</label>
     <input type="text" name="value" value="${cstruct}"
            tal:attributes="size field.widget.size; 
                            class field.widget.css_class"
            id="${field.oid}"/>
-  </div>
+  </li>
 
-  <div>
+  <li>
     <label for="${field.oid}-confirm">${confirm_subject}</label>
     <input type="text" name="confirm" value="${confirm}"
            tal:attributes="size field.widget.size; class
                            field.widget.css_class"
            id="${field.oid}-confirm"/>
-  </div>
-
+  </li>
+</ul>
   <script tal:condition="field.widget.mask" type="text/javascript">
     deform.addCallback(
         '${field.oid}',
@@ -31,7 +29,4 @@
     
   </script>
 
-  <input type="hidden" name="__end__" value="${field.name}:mapping"/>
-
-</div>
-
+<input type="hidden" name="__end__" value="${field.name}:mapping"/>
