@@ -1,16 +1,16 @@
-<div>
-  <input type="hidden" name="__start__" value="${field.name}:mapping"/>
-  <div>
+<input type="hidden" name="__start__" value="${field.name}:mapping"/>
+<ul>
+  <li>
     <label for="${field.oid}">Password</label>
     <input type="password" name="value" value="${cstruct}"
            tal:attributes="size field.widget.size" id="${field.oid}"/>
-  </div>
-  <div>
+  </li>
+  <li>
     <label for="${field.oid}-confirm">Confirm Password</label>
     <input type="password" name="confirm" value="${confirm}"
            tal:attributes="size field.widget.size;
                            class field.widget.css_class" 
            id="${field.oid}-confirm"/>
-  </div>
-  <input type="hidden" name="__end__" value="${field.name}:mapping"/>
-</div>
+  </li>
+</ul>
+<input type="hidden" name="__end__" value="${field.name}:mapping"/>
