@@ -1,5 +1,4 @@
-<div>
-  <ul class="deformSet"> 
+<ul class="deformSet"> 
     <input type="hidden" name="__start__" value="${field.name}:rename"/>
     <tal:loop tal:repeat="choice field.widget.values">
       <tal:def tal:define="(value, title) choice">
@@ -15,6 +14,5 @@
       </tal:def>
     </tal:loop>
     <input type="hidden" name="__end__"/>
-  </ul>
-</div>
+</ul>
 
